Init commit v2.0
The first commit of rethinking this framework. The basic structure and easy plugin launch are implemented here. Modification of bytecode, API, etc. in the following commits